# speer

./: .gitignore  CMakeLists.txt  README.md  compile.sh  docker-compose.yaml  package-lock.json
client/: Containerfile  docker-compose.yaml  package-lock.json  package.json
client/src/: App.tsx  index.css
server/: Containerfile  index.ts  package-lock.json  package.json  types.ts
server/config/: config.ts
supernode_comms/: Containerfile  docker-compose.yaml  index.ts  package-lock.json  state-manager.ts  types.ts
supernode_comms/config/: config.ts
